# cgs

./: README  README.md  run.py  test.env
IDA/: README.md
IDA/include/: BranchDependencyAnalysis.h  CallGraph.h  InterproceduralDependencyAnalysis.h  LLVMEssentials.h
IDA/src/: BranchDependencyAnalysis.cpp  CallGraph.cpp
InterproceduralDependencyAnalysis/: .foo.dot  .main.dot  CMakeLists.txt
InterproceduralDependencyAnalysis/include/: utils.h
InterproceduralDependencyAnalysis/src/: BranchDependencyAnalysis.cpp  InterproceduralDependencyAnalysis.cpp  utils.cpp
benchmark/: README.md  config.txt  prepare_realworld.sh  xmlparse.c
benchmark/grep-3.6/: ChangeLog  Makefile.in  THANKS  aclocal.m4  config.hin  configure
benchmark/grep-3.6/doc/: Makefile.in  grep.info  stamp-vti
benchmark/grep-3.6/gnulib-tests/: Makefile.in  gnulib.mk  localename.c  pthread.in.h  select.c  windows-thread.c  windows-thread.h
benchmark/grep-3.6/lib/: Makefile.in  gnulib.mk
benchmark/grep-3.6/m4/: gnulib-comp.m4
benchmark/grep-3.6/obj-gcov/: Makefile  config.h  config.status
benchmark/grep-3.6/obj-llvm/: .conftest.o.bc  .conftest1.o.bc  .conftest2.o.bc  Makefile  config.h  config.status
benchmark/grep-3.6/obj-ubsan/: .conftest.o.bc  .conftest1.o.bc  .conftest2.o.bc  Makefile  config.h  config.status
benchmark/grep-3.6/po/: af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  grep.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  lt.po  nb.po  nl.po  pa.po  pl.po  (+14 more)
new_benchmark/: grep.bc
stat/: grep.txt
(+666 files in other folders)
